fix: remove SelectableListItem z-index

--- a/station-ui/src/components/displays/list-items/selectable/SelectableListItem.module.scss
+++ b/station-ui/src/components/displays/list-items/selectable/SelectableListItem.module.scss
@@ -5,7 +5,6 @@
   display: flex;
   align-items: center;
   gap: 16px;
-  z-index: 0;
 
   padding: 18px;
   background-color: var(--token-dark-700);
